# avatarvoice-release

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  Dockerfile  Procfile  README.md  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  vercel.json
api/: index.py  requirements.txt
data/: voice_database.sqlite
scripts/: build_database.py  download_cremad.py  gpu_install.sh  gpu_run.sh  local_install.sh  local_run.sh  package_data.sh  setup_data.sh
src/avatarvoice_api/: __init__.py  config.py  dependencies.py  main.py
src/avatarvoice_api/models/: __init__.py  requests.py  responses.py
src/avatarvoice_api/routes/: __init__.py  analyze.py  generate.py  health.py  optimize.py  pipeline.py  voices.py
src/avatarvoice_api/services/: __init__.py  orchestrator.py  pipeline_orchestrator.py
src/avatarvoice_ui/: __init__.py  app.py
src/vibevoice_client/: __init__.py  client.py  exceptions.py  models.py  streaming.py
src/voicematch/: __init__.py  api.py  app.py  audio_processor.py  config.py  database.py  download.py  exceptions.py  gemini_analyzer.py  models.py  prompt_optimizer.py  voice_matcher.py
tests/: __init__.py  conftest.py  test_fixtures.py
tests/integration/: __init__.py  test_api_endpoints.py  test_full_pipeline.py  test_pipeline.py  test_pipeline_e2e.py
tests/unit/: __init__.py  test_api_routes.py  test_app.py  test_audio_processor.py  test_config.py  test_database.py  test_download_cremad.py  test_gemini_analyzer.py  test_pipeline.py  test_prompt_optimizer.py  test_vibevoice_client.py  test_voice_matcher.py  test_voicematch_api.py
